# Jarvis

./: .gitignore  README.md  README_CN.md
SpeakFlow/: .env.example  Dockerfile  pyproject.toml
SpeakFlow-macOS/: Package.swift  project.yml
SpeakFlow-macOS/SpeakFlow.xcodeproj/: project.pbxproj
SpeakFlow-macOS/SpeakFlow/Agent/: AgentAPIClient.swift  AgentHistory.swift  AgentLoop.swift  AgentModels.swift  AgentState.swift  HeartbeatScheduler.swift  MemoryStore.swift
SpeakFlow-macOS/SpeakFlow/App/: AppState.swift  Constants.swift  SpeakFlowApp.swift
SpeakFlow-macOS/SpeakFlow/Models/: AuthModels.swift  ProcessModels.swift  SubscriptionModels.swift
SpeakFlow-macOS/SpeakFlow/Resources/: Info.plist
SpeakFlow-macOS/SpeakFlow/Services/: AudioProcessingService.swift  AudioRecorderService.swift  AuthService.swift  BugReportService.swift  ComposioService.swift  (+8 more)
SpeakFlow-macOS/SpeakFlowTests/: BrowserToolTests.swift  HeartbeatSchedulerTests.swift  HeartbeatToolTests.swift  MemoryStoreTests.swift  MemoryToolTests.swift  ScreenshotToolTests.swift
SpeakFlow-macOS/scripts/: build-and-deploy.sh
SpeakFlow/app/: config.py  db.py  main.py  prompts.py  security.py  sub_agent.py  tool_permissions.py  tool_validation.py
SpeakFlow/app/models/: schemas.py
SpeakFlow/app/routers/: agent.py  composio.py  health.py  history.py  memory.py  process.py  setup.py  usage.py  vocabulary.py
SpeakFlow/app/services/: history_service.py  memory_service.py  openai_service.py  usage_service.py  vocabulary_service.py
SpeakFlow/app/utils/: audio.py  exceptions.py  image.py
(+43 files in other folders)
